# shellthings

./: .gitignore  LICENSE  README.md  secret.sh
secret/: secret.sh
secret/python/secret/: pyproject.toml
secret/python/secret/secret/: __init__.py  secret.py  secret_vault.py
